[package]
name = "ddns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.0"
envy = "0.4.2"
lazy_static = "1.4.0"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["rustls", "rustls-tls", "blocking", "json", "serde_json"], default-features = false }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
